--- a/assets/templates/appResume/premium/sections/public/info.html
+++ b/assets/templates/appResume/premium/sections/public/info.html
@@ -12,7 +12,7 @@
         <div class="info-name">{ $resume.commons.name }{ $resume.commons.surname ? " " + $resume.commons.surname : null }, <span if={ $store.resume.get("sections", {"name": "salary"}).active } class="info-salary">{ _.numberFormat($resume.salary.currency == "1" ? $resume.salary.amount / 1000 : $resume.salary.amount, 0, ".", ".") }{ K : $resume.salary.currency == "1" } { $store.currency.getTitleById($resume.salary.currency) }</span></div>
         <div class="info-city">{ $resume.commons.birthday.hidden ? $store.resume.take.birthday.age() : $store.resume.take.birthday.date() }, { $resume.commons.contacts.city.name }, { $store.resume.take.relocation() }</div>
         <div class="info-email" if={ $resume.commons.contacts.email }><a href="mailto:{ $resume.commons.contacts.email }">{ $resume.commons.contacts.email }</a></div>
-        <div class="info-phone" if={ $resume.commons.contacts.phone }><a href="tel:{ $resume.commons.contacts.phone }">{ $resume.commons.contacts.phone }</a></div>
+        <div class="info-phone" if={ $resume.commons.contacts.phone.number }><a href="{ $store.resume.take.phoneLink() }">{ $store.resume.take.phone() }</a></div>
         <div class="info-post" if={ $resume.post }>{ $resume.post }</div>
         <div class="info-social">
             <ux-social-items classname="social { app.device.isPhone ? 'social-s' : 'social-xs' }"></ui-social-items>
