--- a/assets/css/ui/basic/_input.scss
+++ b/assets/css/ui/basic/_input.scss
@@ -394,6 +394,8 @@
         @extend .w100p;
 
         .country-list {
+            @extend .c-black;
+
             &[data-hidden="true"] {
                 @extend .display-none;
             }
@@ -437,7 +439,7 @@
             @extend .transition-default;
         }
         .flag-container:hover .selected-flag {
-            @extend .bg-blueBright-transparent;
+            background-color:rgba($blueBright,.1);
         }
         &-xl {
             input[type=text] {
