--- a/assets/templates/appResume/basic/templates/template9.html
+++ b/assets/templates/appResume/basic/templates/template9.html
@@ -17,7 +17,7 @@
 			<sup class="t-header-salary-currency">{ $resume.take.salary.worktime() }</sup>
 		</div>
 		<div id="t-header-string">
-			<div if={ $resume.get('commons', 'contacts', 'phone') } class="t-header-string-element"><span>{ $i18n("resume.basic.template.Phone") }:</span> <a href="tel:{ $resume.get('commons', 'contacts', 'phone').replace(/[\s|\-|\(|\)]/g, "") }">{ $resume.get('commons', 'contacts', 'phone') }</a></div>
+			<div if={ $resume.get('commons', 'contacts', 'phone', 'number') } class="t-header-string-element"><span>{ $i18n("resume.basic.template.Phone") }:</span> <a href="{ $store.resume.take.phoneLink() }">{ $store.resume.take.phone() }</a></div>
 			<div if={ $resume.get('commons', 'contacts', 'skype') } class="t-header-string-element"><span>Skype:</span> <a href="skype:{ $resume.get('commons', 'contacts', 'email') }">{ $resume.get('commons', 'contacts', 'skype') }</a></div>
 			<div if={ $resume.get('commons', 'contacts', 'email') } class="t-header-string-element"><span>Email:</span> <a class="t-header-string-element-email" href="mailto:{ $resume.get('commons', 'contacts', 'email') }">{ $resume.get('commons', 'contacts', 'email') }</a></div>
 		</div>
