--- a/assets/templates/appResume/premium/editable/editableTags.html
+++ b/assets/templates/appResume/premium/editable/editableTags.html
@@ -47,6 +47,10 @@
         });
     };
 
+    $.on("autocomplete.select", function(value){
+        $.checkAndInsert(value);
+    });
+
     $.addTag = function(){
         var value = _.clean($["input"].value),
             length = value && value.length;
