--- a/assets/templates/sections/jptest/jptest-content.html
+++ b/assets/templates/sections/jptest/jptest-content.html
@@ -183,8 +183,8 @@
                 hide: true
             }
             _.onEndTransition($.refs ? $.refs["que__item"] : $["que__item"], function(){
-                $.cursor = null;
-                //$.cursor = $.cursor.right();
+                // $.cursor = null;
+                $.cursor = $.cursor.right();
 
                 if ($.cursor){
                     $.update({
