--- a/assets/templates/ui/phone.html
+++ b/assets/templates/ui/phone.html
@@ -6,7 +6,7 @@
             <div class="arrow"></div>
         </div>
         <select if={ app.device.isMobile } onChange={ onChange }>
-            <option each={ item, i in opts.items } no-reorder value={ item._id } selected={ value.id == item._id || !value.id && item._id == "ru" }>{ item.title } +{ item.code }</option>
+            <option each={ item, i in opts.items } no-reorder value={ item._id } selected={ value.id == item._id || !value.id && item._id == "ru" }>{ item.title.replace(/\s\(.+\)/g, "") } (+{ item.code })</option>
         </select>
         <ul if={ !app.device.isMobile } name="select" class="country-list dropup" data-hidden={ !showList }>
             <virtual each={ item in preferred() } no-reorder>
