--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -131,6 +131,7 @@ $cubic42: cubic-bezier(.42,0,.05,1);
 $cubic345: cubic-bezier(.345,.000,.050,.995);
 $cubic089: cubic-bezier(0,.89,.44,1);
 $cubic075: cubic-bezier(.075,.82,.165,1);
+$cubic263: cubic-bezier(.2,.6,.3,1);
 
 $cubic145: cubic-bezier(.145,.82,.34,1.015);
 
