--- a/public/css/mobile/ui/_menu.scss
+++ b/public/css/mobile/ui/_menu.scss
@@ -96,6 +96,7 @@
 
         &:before,
         &:after {
+            @include accelerate();
             @extend .content-empty;
             @extend .pos-abs;
             @extend .t50;
